[project]
name = "short-term-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langsmith>=0.8.18",
    "lxml>=6.1.1",
    "numpy>=2.4.6",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "psycopg-binary>=3.3.4",
    "pydantic>=2.13.4",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
    "youtube-transcript-api>=1.2.4",
]
